stacks/tools/plantuml/plantuml-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plantuml-deployment
  labels:
    app: plantuml
spec:
  replicas: 2
  selector:
    matchLabels:
      app: plantuml
  template:
    metadata:
      labels:
        app: plantuml
    spec:
      containers:
      - name: plantuml
        image: plantuml/plantuml-server:jetty
        ports:
        - containerPort: 8080
