stacks/tools/plantuml/plantuml-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plantuml
  # namespace: traefik
spec:
  ports:
    - port: 8080
      protocol: TCP
      # targetPort: 80
  selector:
    app: plantuml
  type: ClusterIP
