stacks/tools/plantuml/plantuml-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: plantuml
  namespace: default
spec:
  entryPoints:
    - websecure
    # - web
  routes:
    - match: Host(`plantuml.localhost`)
      kind: Rule
      middlewares:
        - name: headers-default
      services:
        - name: plantuml
          namespace: default
          port: 8080
